# file-inspector-c

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
man/: Makefile.am
old/inspector/: file-captain.h
src/: Makefile.am  common.h
src/inspector/: Makefile.am  file-captain.c  file-captain.h  file-inspector.c  file-inspector.h
src/lib/: Makefile.am  README.md  algo-core.h  algo-name-size-type.c  algo-name-size-type.h  algo.c  array.c  array.h  conjoined-string.c  conjoined-string.h  debug.c  debug.h  detector-private.h  detector.c  detector.h  file-conflict.c  file-conflict.h  file-container.c  file-container.h  file-hash.c  file-hash.h  file-list-array.c  file-list-array.h  file-manager.c  file-manager.h  file.c  file.h  lib-common.h  lib.h  list.c  list.h  ref.h  string-helper.c  string-helper.h  util-string.c  util-string.h  util-time.c  util-time.h
test/: .gitignore  Makefile.am  test-suite.c  tests-common.h
test/fs/files/deep1/level1/level2/: file1
test/lib/: array-test.c  array-test.h  test-array.c  test-array.h  test-conflict-list-iteration.c  test-conflict-list-iteration.h  test-conjoined-string.c  test-conjoined-string.h  test-file-container.c  test-file-container.h  test-file-creation.c  test-file-creation.h  test-file-manager.c  test-file-manager.h  test-list-iteration.c  test-list-iteration.h  test-util-string.c  test-util-string.h
