
## Libraries
noinst_LTLIBRARIES= $(top_builddir)/lib/libdetector.la

__top_builddir__lib_libdetector_la_SOURCES = \
	debug.c				     \
	array.c				     \
	list.c				     \
	util-string.c			     \
	file.c				     \
	file-container.c		     \
	file-manager.c			     \
	algo.c				     \
	algo-name-size-type.c		     \
	file-conflict.c			     \
	detector.c

